--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "atoms": "^0.2.0",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "recoil": "^0.7.6"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
