--- a/package.json
+++ b/package.json
@@ -7,19 +7,24 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@stripe/firestore-stripe-payments": "^0.0.6",
     "atoms": "^0.2.0",
     "next": "latest",
+    "next-transpile-modules": "^9.1.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.6.0",
-    "recoil": "^0.7.6"
+    "recoil": "^0.7.6",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
+    "cypress": "^10.10.0",
     "postcss": "^8.4.14",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
   }
